fix: round borders of login-ellipses-container to avoid overflow

--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -108,6 +108,7 @@
 
     position: absolute;
 
+    border-radius: inherit;
     opacity: 0.4;
     overflow: hidden;
 
